<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItems">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="111dp"
        android:text="@string/change_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <EditText
        android:id="@+id/input_jagharaldrig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_add_jagharaldrig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_btn"
        app:layout_constraintEnd_toEndOf="@+id/input_jagharaldrig"
        app:layout_constraintStart_toStartOf="@+id/input_jagharaldrig"
        app:layout_constraintTop_toBottomOf="@+id/input_jagharaldrig" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/add_mesttrolig"
        app:layout_constraintBottom_toTopOf="@+id/input_mesttrolig"
        app:layout_constraintStart_toStartOf="@+id/input_mesttrolig" />

    <EditText
        android:id="@+id/input_mesttrolig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_jagharaldrig" />

    <Button
        android:id="@+id/btn_add_mesttrolig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_btn"
        app:layout_constraintEnd_toEndOf="@+id/input_mesttrolig"
        app:layout_constraintStart_toStartOf="@+id/input_mesttrolig"
        app:layout_constraintTop_toBottomOf="@+id/input_mesttrolig" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/add_jagaharaldrig"
        app:layout_constraintBottom_toTopOf="@+id/input_jagharaldrig"
        app:layout_constraintStart_toStartOf="@+id/input_jagharaldrig" />
</androidx.constraintlayout.widget.ConstraintLayout>