<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F888D"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/wallpaper" />

    <TextView
        android:id="@+id/textBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8FEFF704"
        android:padding="10dp"
        android:shadowColor="#00CA1B1B"
        android:soundEffectsEnabled="true"
        android:text="@string/change_text"

        android:textColor="#0E0D0D"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.787" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="263dp"
        android:layout_height="225dp"
        android:src="@drawable/scott"
        app:layout_constraintBottom_toTopOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView_mostlikely"
        android:layout_width="263dp"
        android:layout_height="225dp"
        android:src="@drawable/mostlikely"
        app:layout_constraintBottom_toTopOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/button"
        android:layout_width="282dp"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="nextMessage"
        android:text="@string/press_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <Button
        android:id="@+id/btnShowAnswer"
        android:layout_width="282dp"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="showAnswer"
        android:text="@string/show_answer"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <ImageView
        android:id="@+id/pictureDayImg"
        android:layout_width="345dp"
        android:layout_height="393dp"
        app:layout_constraintBottom_toTopOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addItem"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>